methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:19: error: value foreach is not a member of Int
  for(i <- 4)
           ^